--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,7 @@
 <head>
   <title>Application Layout</title>
   <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag "application" %>
-    <% = yield :js %>
+    <%= stylesheet_link_tag    'application' %>
 </head>
 <body>
 
